# cx-mq

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/base/: consumer.c  id.c  message.c  message.h  producer.c  server.c
src/client/: client_c.c  client_p.c
